# statusphere-example-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
lexicons/: status.json
src/: error.rs  home.rs  ingester.rs  login.rs  main.rs  oauth.rs  status.rs  store.rs
templates/: error.jinja  home.jinja  layout.jinja  login.jinja
